fixed tab spacing, removed highlighting on menu

--- a/app/sidebar/style.scss
+++ b/app/sidebar/style.scss
@@ -6,18 +6,17 @@
 
   #sidebar-container {
     -webkit-user-select: none;
-  visibility: hidden;
-  display: flex;
-  position: relative;
-  min-width: 10px;
-  width: 10px;  
-  margin-top: 120px;
-}
+    visibility: hidden;
+    display: flex;
+    position: relative;
+    width: 10px;  
+    margin-top: 120px;
+  }
 
-#sidebar-container.expanded{
-      width:160px;
-      visibility: visible;
-    
+  #sidebar-container.expanded{
+    width:160px;
+    visibility: visible;
+    min-width: 40px; 
   }
 
 
